--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "ajv": "^8.17.1",
     "ajv-keywords": "^5.1.0",
     "autoprefixer": "^10.4.17",
+    "axios": "^1.7.9",
     "clsx": "^2.1.1",
     "framer-motion": "^11.18.2",
     "ionicons": "^7.2.2",
