--- a/server/package.json
+++ b/server/package.json
@@ -10,13 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "express-mongoose": "^0.1.0",
-    "mongoose": "^8.9.6",
+    "mongoose": "^8.14.1",
     "nodemon": "^3.1.9",
-    "razorpay": "^2.9.5"
+    "path": "^0.12.7",
+    "url": "^0.11.4"
   }
 }
