--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-handlebars": "^8.0.3",
+    "moment": "^2.30.1",
     "mongoose": "^8.14.1",
     "nodemon": "^3.1.9",
     "path": "^0.12.7",
