--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.469.0",
     "mdb-react-ui-kit": "^7.2.0",
+    "motion": "^12.9.2",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
