--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "express-handlebars": "^8.0.3",
     "moment": "^2.30.1",
     "mongoose": "^8.14.1",
+    "node-fetch": "^3.3.2",
     "nodemon": "^3.1.9",
     "path": "^0.12.7",
     "url": "^0.11.4"
