--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.22.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-slick": "^0.30.2",
     "react-toastify": "^11.0.3",
     "slick-carousel": "^1.8.1",
